Bug #1572 - Group / Member Profiles: Spacing between content areas

--- a/wp-content/themes/openlab/style.less
+++ b/wp-content/themes/openlab/style.less
@@ -2081,7 +2081,7 @@ input#group-request-send {
         }
     }
     #profile-action-wrapper{
-        margin-bottom: 12px;
+        margin-bottom: 20px;
     }
     @media (max-width: @screen-xs-max){
         margin-top: 20px;
